# advent-of-code-2024

./: .gitignore  pyproject.toml
aoc24/: utils.py
aoc24/days/: day-template.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
