[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Arnav Prasad <arnav.prasad@lendable.co.uk>"]
readme = "README.md"
packages = [
    { include = "aoc24" },
]

[tool.poetry.dependencies]
python = "^3.13"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"